// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`elides type-only CommonJS imports (verbatimModuleSyntax: false) 1`] = `
"local value = {
	value = 42,
}
print(value.value)
return nil
"
`;

exports[`elides type-only CommonJS imports (verbatimModuleSyntax: true) 1`] = `
"local value = {
	value = 42,
}
print(value.value)
return nil
"
`;

exports[`imports a local module in VirtualProject without project references 1`] = `
"local TS = _G[script]
local value = TS.import(script, script.Parent, "value").value
local result = value
return {
	result = result,
}
"
`;

exports[`imports a package described by an ambient module declaration 1`] = `
"local TS = _G[script]
local value = TS.import(script, script.Parent, "include", "node_modules", "@rbxts", "example").value
return {
	value = value,
}
"
`;

exports[`imports a scoped dependency from a package 1`] = `
"local TS = _G[script]
local value = TS.import(script, TS.getModule(script, "@rbxts", "example")).value
local result = value
return {
	result = result,
}
"
`;

exports[`preserves unmarked import-equals side effects with noCheck (verbatimModuleSyntax: false) 1`] = `
"local value = {
	value = 42,
}
print(value.value)
return nil
"
`;

exports[`preserves unmarked import-equals side effects with noCheck (verbatimModuleSyntax: true) 1`] = `
"local TS = require(game:GetService("ReplicatedStorage"):WaitForChild("include"):WaitForChild("RuntimeLib"))
TS.import(script, game:GetService("ReplicatedStorage"), "game", "shape")
local value = {
	value = 42,
}
print(value.value)
return nil
"
`;

exports[`re-exports an export-equals class through a default alias 1`] = `
"local TS = _G[script]
local exports = {}
exports.Value = TS.import(script, script.Parent, "value")
return exports
"
`;

exports[`re-exports an export-equals class with a static default through a default alias 1`] = `
"local TS = _G[script]
local exports = {}
exports.Value = TS.import(script, script.Parent, "value")
return exports
"
`;

exports[`re-exports an export-equals function through a default alias 1`] = `
"local TS = _G[script]
local exports = {}
exports.Value = TS.import(script, script.Parent, "value")
return exports
"
`;

exports[`re-exports an export-equals object through a default alias 1`] = `
"local TS = _G[script]
local exports = {}
exports.Value = TS.import(script, script.Parent, "value")
return exports
"
`;

exports[`re-exports an export-equals object with a default property as the complete module 1`] = `
"local TS = _G[script]
local exports = {}
exports.default = TS.import(script, script.Parent, "value")
return exports
"
`;

exports[`re-exports an export-equals package through a default alias 1`] = `
"local TS = _G[script]
local exports = {}
exports.Library = TS.import(script, script.Parent, "include", "node_modules", "@rbxts", "example")
return exports
"
`;

exports[`re-exports default aliases and named properties with one import 1`] = `
"local TS = _G[script]
local exports = {}
local _value = TS.import(script, script.Parent, "value")
exports.first = _value
exports["second-alias"] = _value
exports.value = _value.value
return exports
"
`;

exports[`re-exports default values and named exports from ES modules 1`] = `
"local TS = _G[script]
local exports = {}
local _value = TS.import(script, script.Parent, "value")
exports.value = _value.default
exports.named = _value.named
return exports
"
`;

exports[`re-exports defaults through a barrel without unwrapping its module 1`] = `
"local TS = _G[script]
local exports = {}
exports.Value = TS.import(script, script.Parent, "barrel").default
return exports
"
`;

exports[`uses relative imports within an isolated game container 1`] = `
"local TS = require(game:GetService("ReplicatedStorage"):WaitForChild("include"):WaitForChild("RuntimeLib"))
local value = TS.import(script, script, "value").value
print(value)
return nil
"
`;
